--- a/logstash-mahasiswa.conf
+++ b/logstash-mahasiswa.conf
@@ -5,7 +5,7 @@
 input {
     mongodb {
         uri => "mongodb://if:samasemua@if.unismuh.ac.id:27222/latihan"
-        placeholder_db_dir => "/workspaces/elasticsearch/logstash/logstash-mahasiswa"
+        placeholder_db_dir => "./logstash/logstash-mahasiswa"
         placeholder_db_name => "logstash_sqlite.db"
         collection => "mahasiswa"
         batch_size => 5000
